...
        <Controller
          control={control}
          name="description"
          render={({ field: { onChange, value } }) => (
            <TextInput
              className="border border-gray-300 rounded-lg px-4 py-3 text-sm text-gray-900 bg-gray-50"
              placeholder="Descreva a ocorrência com detalhes..."
              multiline
              numberOfLines={5}
              textAlignVertical="top"
              value={value}
              onChangeText={onChange}
            />
...
